[gd_scene load_steps=17 format=3 uid="uid://dtoq8ufipkwbq"]

[ext_resource type="Script" uid="uid://blggup84dy1wb" path="res://scripts/scorbion.gd" id="1_cjtid"]
[ext_resource type="Texture2D" uid="uid://bud58ipjdhdpq" path="res://assests/temple/enimes/3 Scorpio/Scorpio_walk.png" id="1_w1lpl"]
[ext_resource type="Script" uid="uid://b4nl0nemb21gc" path="res://scripts/hitbox.gd" id="2_cjtid"]
[ext_resource type="Texture2D" uid="uid://co6hpwusf11oe" path="res://assests/temple/enimes/3 Scorpio/Scorpio_death.png" id="2_vbqx6"]
[ext_resource type="AudioStream" uid="uid://bys6dsku1j54l" path="res://assests/temple/sound eff/scorbion death.mp3" id="4_acd8c"]

[sub_resource type="AtlasTexture" id="AtlasTexture_4nbds"]
atlas = ExtResource("2_vbqx6")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_jkuwo"]
atlas = ExtResource("2_vbqx6")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_f65h7"]
atlas = ExtResource("2_vbqx6")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ragqc"]
atlas = ExtResource("2_vbqx6")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_xl1ks"]
atlas = ExtResource("1_w1lpl")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_4v0nd"]
atlas = ExtResource("1_w1lpl")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_d84b5"]
atlas = ExtResource("1_w1lpl")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_xtf5g"]
atlas = ExtResource("1_w1lpl")
region = Rect2(144, 0, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_k1btg"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4nbds")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jkuwo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f65h7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ragqc")
}],
"loop": true,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xl1ks")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4v0nd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d84b5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xtf5g")
}],
"loop": true,
"name": &"walking",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_g8lh1"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_vbqx6"]
radius = 14.2857
height = 42.8571

[node name="scorbion" type="Node2D"]
scale = Vector2(0.7, 0.7)
script = ExtResource("1_cjtid")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-6, -24)
sprite_frames = SubResource("SpriteFrames_k1btg")
animation = &"death"
autoplay = "walking"
frame_progress = 0.0343311

[node name="RayCastD" type="RayCast2D" parent="."]
position = Vector2(0, -8)
target_position = Vector2(0, -16)
collision_mask = 4

[node name="RayCastU" type="RayCast2D" parent="."]
position = Vector2(0, -8)
target_position = Vector2(0, 11)
collision_mask = 4

[node name="HitBoxs" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 0
script = ExtResource("2_cjtid")
metadata/_custom_type_script = "uid://b4nl0nemb21gc"

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBoxs"]
position = Vector2(0, -10)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_g8lh1")

[node name="hurtm" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurtm"]
position = Vector2(-1.90735e-06, -11.4286)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_vbqx6")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_acd8c")

[connection signal="area_entered" from="hurtm" to="." method="_on_hurtm_area_entered"]
